--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
 	"name": "home-buddy",
 	"version": "0.1.0",
+	"engines": {
+		"node": "~16",
+		"npm": "~8"
+	},
 	"private": true,
 	"dependencies": {
 		"@testing-library/jest-dom": "^5.16.5",
