--- a/package.json
+++ b/package.json
@@ -43,10 +43,13 @@
 		]
 	},
 	"dependencies": {
+		"@sass-fairy/math": "^1.0.3",
 		"bootstrap": "^5.2.2",
+		"classnames": "^2.3.2",
 		"eslint": "8.27.0",
 		"eslint-config-next": "13.0.3",
 		"next": "13.0.3",
+		"normalize.css": "^8.0.1",
 		"react": "18.2.0",
 		"react-dom": "18.2.0"
 	},
